migration/RC_Deal_Desk_Agent/src/objects/Quote/fields/RC_ARRComments__c.field-meta.xml
<CustomField>
    <fullName>RC_ARRComments__c</fullName>
    <label>ARR Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>