migration/RC_Deal_Desk_Agent/src/objects/Quote/fields/RC_CommissionComments__c.field-meta.xml
<CustomField>
    <fullName>RC_CommissionComments__c</fullName>
    <label>Commission Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>