migration/RC_Deal_Desk_Agent/src/objects/Quote/fields/RC_MRRComments__c.field-meta.xml
<CustomField>
    <fullName>RC_MRRComments__c</fullName>
    <label>MRR Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>