migration/RC_Deal_Desk_Agent/src/objects/Quote/fields/RC_OneTimeChargeComments__c.field-meta.xml
<CustomField>
    <fullName>RC_OneTimeChargeComments__c</fullName>
    <label>One-Time Charge Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>