migration/RC_Deal_Desk_Agent/src/objects/Quote/fields/RC_Quote_DealDeskFullJson__c.field-meta.xml
<CustomField>
    <fullName>RC_Quote_DealDeskFullJson__c</fullName>
    <label>Quote.DealDeskFullJson</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>